# S3-IMAKER

./: .gitignore  README.md  world.cpp  world.hpp
Imaker/: CMakeLists.txt
Imaker/UP/: CMakeLists.txt  main.cpp  test_imgui.cpp
Imaker/UP/shaders/: 3D.vs.glsl  colors.fs.glsl  directionallight.fs.glsl  dirlightPhong.fs.glsl  lights.fs.glsl  multiTex3D.fs.glsl  normals.fs.glsl  ponctuallight.fs.glsl  tex3D.fs.glsl
Imaker/assets/: CMakeLists.txt
Imaker/assets/data/: NewFile.imaker  hello.imaker  save1.imaker
Imaker/class/: CMakeLists.txt
Imaker/class/include/class/: Cube.hpp  Cursor.hpp  File.hpp  Interface.hpp  RBF.hpp  World.hpp  world.hpp
Imaker/class/src/: Cube.cpp  Cursor.cpp  File.cpp  Interface.cpp  RBF.cpp  World.cpp  cube.cpp  world.cpp
Imaker/glimac/include/glimac/: SDLWindowManager.hpp  TrackBallCamera.hpp
Imaker/glimac/src/: SDLWindowManager.cpp
Imaker/imgui/: CMakeLists.txt
Imaker/imgui/src/: imgui.cpp
